--- a/index.html
+++ b/index.html
@@ -57,7 +57,16 @@
 
         <div class="g-3 col-md-5 places float-end">
             <h2 class="text-center p-3">Places Visited</h2>
-            <div id="placeName"></div>
+            <div class="content">
+                <div id="placeName"></div>
+                <div id ="details"></div>
+            </div>
+            <div class="col-md-12 mt-3">
+                <button id="clear" 
+                    type="button" 
+                    class="btn btn-secondary position-absolute bottom-0 end-0 m-3">Clear
+                </button>
+            </div>
         </div>
 
     </section>
