adds a clear button able to clear places, can add mutiple places, can clear the inputs

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="col-md-12 mt-3">
                 <button id="clear" 
                     type="button" 
-                    class="btn btn-secondary position-absolute bottom-0 end-0 m-3">Clear
+                    class="btn btn-info position-absolute bottom-0 end-0 m-3">Clear
                 </button>
             </div>
         </div>
