previous paragarpah inheits css from newly appended paragraph

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
 
-    <section class="container-fluid bg-img row">
+    <section class="container-fluid bg-img row p-5">
 
         <div class="col-md-7 g-3 ">
             <h2>Enter Place</h2>
@@ -55,17 +55,12 @@
             </form>
         </div>
 
-        <div class="g-3 col-md-5 places float-end">
+        <div class="g-3 col-md-5 places">
             <h2 class="text-center p-3">Places Visited</h2>
             <div class="content">
                 <div id="placeName"></div>
                 <div id ="details"></div>
-            </div>
-            <div class="col-md-12 mt-3">
-                <button id="clear" 
-                    type="button" 
-                    class="btn btn-info position-absolute bottom-0 end-0 m-3">Clear
-                </button>
+                <button id="clear" type="button" class="btn btn-info float-end">Clear </button>
             </div>
         </div>
 
